axion-ui-manifests/axion-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ui-deployment
  labels:
    app: axion-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: axion-ui
  template:
    metadata:
      labels:
        app: axion-ui
    spec:
      nodeSelector: 
        kubernetes.azure.com/agentpool: anunode
      containers:
      - name: axion-ui-container
        image: anuacr.azurecr.io/axion-ui:v2
        
        resources:
          requests:
            memory: "120Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
