axion-ui-manifests/axion-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ui-ingress
  labels:
    app: axion-ui
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: axion.anupiyasingh.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axion-ui-service
            port:
              number: 80
